--- a/UIN_coursefiles_2023/arbeidskrav_2/style.css
+++ b/UIN_coursefiles_2023/arbeidskrav_2/style.css
@@ -33,13 +33,11 @@ nav {
     width: 100%;
     display: flex;
     border: 2px solid black;
+    margin-left: 0;
+    justify-content: space-between;
 }
 
-nav ul {
-    padding-left: 0;
-}
-
-nav ul li {
+nav button {
    
     background-color: var(--grey);
     display: inline-block;
@@ -48,9 +46,9 @@ nav ul li {
     
 }
 
-main {
+section {
     width: 100%;
-    display: flex;
+    /* display: flex; */
     border: 2px solid black;
 
 }
